--- a/Lab1/style.css
+++ b/Lab1/style.css
@@ -19,7 +19,49 @@ header{
     
 }
 
-.houseView{
+.container {
+    overflow: hidden;
+}
+
+.filterDiv {
+    float: left;
+    background-color: #2196F3;
+    color: #ffffff;
+    width: 100px;
+    line-height: 100px;
+    text-align: center;
+    margin: 2px;
+    display: none; /* Hidden by default */
+}
+
+/* The "show" class is added to the filtered elements */
+.show {
+    display: block;
+}
+
+/* Style the buttons */
+.btn {
+    border: none;
+    outline: none;
+    padding: 12px 16px;
+    background-color: #f1f1f1;
+    cursor: pointer;
+}
+
+/* Add a light grey background on mouse-over */
+.btn:hover {
+    background-color: #ddd;
+}
+
+/* Add a dark background to the active button */
+.btn.active {
+    background-color: #666;
+    color: white;
+}
+
+
+
+.houseContainer{
     display: grid;
     grid-template-columns: auto auto auto;
     justify-items: center;
@@ -31,9 +73,35 @@ header{
 }
 
 .house{
-    width: 256px;
-    height: 450px;
-    background-color: aqua;
+    display: flex;
+    width: 400px;
+    height: 256px;
+    background-color: var(--white);
     margin: 15px;
     border: 1px solid red;
+
+    border-radius: 15px;
+
+    img{
+        border-bottom-left-radius: 15px;
+        border-top-left-radius: 15px;
+    }
+
+    -webkit-box-shadow: 4px 2px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 4px 2px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 4px 2px 5px 0px rgba(0,0,0,0.75)
 }
+
+.houseInfo{
+    display: grid;
+    justify-content: center;
+    width: 100%;
+    padding-top: 10px;
+    border: 1px solid red;
+}
+
+.housePrice{
+    font-size: larger;
+}
+
+
